crates/query-engine/translation/tests/snapshots/tests__no_fields.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  ISNULL([2_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
    FROM
      [public].[Album] AS [0_Album]
    ORDER BY
      [0_Album].[AlbumId] ASC OFFSET 0 ROWS FETCH NEXT 10 ROWS ONLY FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [2_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]